--- a/src/app/hiking-diary/hiking-detail/hiking-detail.component.html
+++ b/src/app/hiking-diary/hiking-detail/hiking-detail.component.html
@@ -13,12 +13,12 @@
       <div class="pad-left-right">
         <div class="row">
           <label>Description:</label>
-          <span class="label-value">{{hike?.description}}</span>
+          <span class="label-value">{{hike.description}}</span>
         </div>
         <br>
         <div class="row">
-          <label>image URL:</label>
-          <span class="label-value">{{hike?.imageUrl}}</span>
+          <label>image URL: </label>
+          <img class="label-value" src={{hike?.imageUrl}}>
         </div>
       </div>
     </div>
