--- a/src/app/hiking-diary/hiking-edit/hiking-edit.component.html
+++ b/src/app/hiking-diary/hiking-edit/hiking-edit.component.html
@@ -34,11 +34,11 @@
   
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label for="url">Hike URL:</label>
+            <label for="url">Hike image URL:</label>
             <input required
-              name="url"
+              name="imageUrl"
               type="text"
-              id="url"
+              id="imageUrl"
               class="form-control"
               size="150"
               max="255"
